# CPlusPlus-Gtk

./: .clang-format  .gitignore  LICENSE  README.md
Battleships-Game/: CMakeLists.txt  battleships_game.cpp
Battleships-Game/src/: CMakeLists.txt
Converter/: CMakeLists.txt  README.md  converter.glade
Converter/include/: cmd_app.hpp  converter.hpp  gtk_app.hpp
Converter/include/files/: converter_glade.hpp
Converter/src/: CMakeLists.txt  cmd_app.cpp  cmd_main.cpp  converter.cpp  gtk_app.cpp  gtk_main.cpp
Converter/test/: CMakeLists.txt  converter_test.cpp
DI-Container/: build.number  build.xml  ivy.xml
DI-container/: .gitignore  build.xml
FPGA-SoundMixer/: .gitignore  FPGA-SoundMixer.done  FPGA-SoundMixer.htm  FPGA-SoundMixer.ipregen.rpt  FPGA-SoundMixer.qsf  FPGA-SoundMixer.qws  FPGA-SoundMixer.sdc  FPGA-SoundMixer.v  FPGA-SoundMixer_assignment_defaults.qdf  amplifier.v  audio_amplifier.v  audio_amplifier_hw.tcl  gain_hex.v  mixer.sopcinfo  synchro.v
FPGA-SoundMixer/.qsys_edit/: preferences.xml
FPGA-SoundMixer/db/: .ipregen.qmsg  FPGA-SoundMixer.cmp.rdb  FPGA-SoundMixer.db_info  prev_cmp_FPGA-SoundMixer.qmsg
FPGA-SoundMixer/mixer/: mixer.html  mixer.xml  mixer_bb.v  mixer_generation.rpt  mixer_inst.v  mixer_inst.vhd
Lotto/: CMakeLists.txt  lotto.cpp  lotto.glade
Lotto/include/: gtk_app.hpp  lotto_game.hpp
Lotto/include/files/: lotto_glade.hpp
Lotto/src/: CMakeLists.txt  gtk_app.cpp  lotto.cpp  lotto_game.cpp
PI-Generator/: .gitignore  CMakeLists.txt  Makefile  generator.cpp  generator.glade  generator_pi  generator_pi.cpp
PI-Generator/include/: gtk_app.hpp
PI-Generator/include/files/: generator_glade.hpp
PI-Generator/src/: CMakeLists.txt  gtk_app.cpp  pi_generator.cpp
Ships-Game/: .gitignore  CMakeLists.txt
Ships-Game/src/: CMakeLists.txt
SoundMixer/: .gitignore  FPGA-SoundMixer.asm.rpt  FPGA-SoundMixer.done  FPGA-SoundMixer.fit.rpt  FPGA-SoundMixer.fit.summary  FPGA-SoundMixer.flow.rpt  FPGA-SoundMixer.jdi  FPGA-SoundMixer.map.rpt  FPGA-SoundMixer.map.summary  FPGA-SoundMixer.pin  FPGA-SoundMixer.qpf  FPGA-SoundMixer.qsf  FPGA-SoundMixer.sta.rpt  FPGA-SoundMixer.v  SoundMixer.asm.rpt  SoundMixer.cdf  SoundMixer.done  SoundMixer.fit.rpt  SoundMixer.fit.summary  SoundMixer.flow.rpt  SoundMixer.ipregen.rpt  SoundMixer.jdi  SoundMixer.map.rpt  SoundMixer.map.smsg  SoundMixer.map.summary  SoundMixer.pin  SoundMixer.qpf  SoundMixer.qsf  SoundMixer.qws  SoundMixer.sdc  SoundMixer.sld  SoundMixer.sta.rpt  SoundMixer.sta.summary  SoundMixer.v  SoundMixer_assignment_defaults.qdf  amplifier.v  audio_amplifier.v  audio_amplifier_hw.tcl  band_pass_filter.v  band_pass_filter_hw.tcl  (+12 more)
SoundMixer/.qsys_edit/: mixer_schematic.nlv  preferences.xml
SoundMixer/db/: .cmp.kpt  .ipregen.qmsg  .nfs00000000015a7b78000004a9  FPGA-SoundMixer.(0).cnf.cdb  FPGA-SoundMixer.(0).cnf.hdb  FPGA-SoundMixer.asm.qmsg  FPGA-SoundMixer.asm.rdb  FPGA-SoundMixer.cbx.xml  FPGA-SoundMixer.cmp.bpm  FPGA-SoundMixer.cmp.cdb  FPGA-SoundMixer.cmp.hdb  FPGA-SoundMixer.cmp.idb  FPGA-SoundMixer.cmp.logdb  FPGA-SoundMixer.cmp.rdb  FPGA-SoundMixer.cmp_merge.kpt  FPGA-SoundMixer.db_info  FPGA-SoundMixer.fit.qmsg  FPGA-SoundMixer.hier_info  FPGA-SoundMixer.hif  FPGA-SoundMixer.map.bpm  FPGA-SoundMixer.map.cdb  FPGA-SoundMixer.map.hdb  FPGA-SoundMixer.map.kpt  FPGA-SoundMixer.map.qmsg  FPGA-SoundMixer.map.rdb  FPGA-SoundMixer.map_bb.cdb  FPGA-SoundMixer.map_bb.hdb  FPGA-SoundMixer.pre_map.hdb  FPGA-SoundMixer.root_partition.map.reg_db.cdb  FPGA-SoundMixer.rtlv.hdb  FPGA-SoundMixer.rtlv_sg.cdb  FPGA-SoundMixer.sta.qmsg  (+307 more)
allocator/: .gitignore  CMakeLists.txt  memalc.h  pthreadsem.c  pthreadsem.h
allocator/include/: memalc.h  pthreadsem.h
allocator/src/: memalc.c
alokator_pamieci/: Makefile  pthread_semaphore.c
arkanoid/: Arkanoid.cpp  FragmentShader.glsl  GameElement.cpp  Makefile
converter/: .gitignore  CMakeLists.txt  Makefile  README.md  converter.cpp  converter.glade
converter/include/: cmd_app.hpp  converter.hpp  gtk_app.hpp
converter/src/: cmd_app.cpp  cmd_main.cpp  converter-1.cpp  converter.cpp  gtk_app.cpp  gtk_main.cpp
domowe/: converter.cpp  generator_pi.cpp  lotto.cpp  statki.cpp
generator_pi/: Makefile  generator.glade  generator_pi.cpp
gomoku/: .gitignore  .gomoku.stat  Makefile  _tags  board.ml  board_gui.ml  comp_player.ml  dune-project  game.ml  gomoku.ml  gui.ml  gui_runner.ml  human_player.ml  stat.ml  stat_gui.ml
gra_zamki/: players.db  zamki.py
interpreter-APO/: .gitignore  build.xml
interpreter_apo/: build.xml  prog1.apo
lotto/: .gitignore  CMakeLists.txt  Makefile  lotto.cpp  lotto2.cpp
lotto/src/: gtk_app.cpp
memory/: FragmentShader.glsl  GLSLloader.cpp  GameController.cpp  Makefile  MemoryGame.cpp
memory_allocator/: CMakeLists.txt  Makefile  memalc.c  pthread_semaphore.c
mortal_bubbles/: GameBubble.hpp  GamePlayer.cpp  GamePlayer.hpp  Makefile
pi-generator/: .gitignore  CMakeLists.txt  generator.cpp  generator.glade
pi-generator/src/: gtk_app.cpp
saper/: .gitignore  jquery-3.1.1.js  jquery.d.ts  saper.css  saper.html  saper.js  saper.ts  tsconfig.json
statki/: .gitignore  CMakeLists.txt  Makefile  statki.cpp
studenckie/: model_fiz.sql
terrain_map/: Detailing.hpp  Earth.cpp  GLSLloader.cpp  GLSLloader.hpp  Makefile
traceroute/: CMakeLists.txt  ICMPController.cpp  ICMPController.hpp  ICMPReceiver.cpp  ICMPReceiver.hpp  ICMPSender.cpp  ICMPSender.hpp  IPAddress.cpp  IPAddress.hpp  Makefile  RawSocket.cpp  RawSocket.hpp  SocketController.cpp  SocketController.hpp  SocketReceiver.cpp  SocketReceiver.hpp  SocketSender.cpp  SocketSender.hpp  traceroute.cpp
traceroute/include/: ICMPController.hpp  ICMPReceiver.hpp  ICMPSender.hpp  IPAddress.hpp  RawSocket.hpp
traceroute/src/: ICMPSender.cpp  IPAddress.cpp  traceroute.cpp
uczelnianie/: pthread_semaphore.c
warsztat/: .gitignore  baza.sql  extra.glade  extra.py  init_db.sql  klienci.py  login.glade  login.py  magazynier.glade  magazynier.py  mechanik.py  sprzedawca.py  uslugi.glade  uslugi.py  warsztat.py  zlecenia.glade  zlecenia.py
zamki/: .gitignore  zamki.py
(+611 files in other folders)
